--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "mysql2": "^3.7.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
