--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@ckeditor/ckeditor5-upload": "^41.0.0",
     "@hookform/resolvers": "^3.3.4",
+    "@types/ckeditor__ckeditor5-upload": "^37.0.0",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "ckeditor5-custom-build": "file:ckeditor5",
@@ -24,6 +26,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
