--- a/compose.yaml
+++ b/compose.yaml
@@ -18,7 +18,7 @@ services:
       - "3306:3306"
     volumes:
       - dbdata:/var/lib/mysql
-    restart: always
+    # restart: always
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -29,7 +29,7 @@ services:
       PMA_HOST: database
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
-    restart: always
+    # restart: always
     ports:
       - 8081:80
 volumes:
