--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "ckeditor5-custom-build": "file:ckeditor5",
+    "dayjs": "^1.11.10",
     "mysql2": "^3.7.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
