Code refactor e qualche aggiunta in vista della feature delle immagini.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^6.2.0",
-    "@ckeditor/ckeditor5-upload": "^41.0.0",
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
@@ -21,9 +20,11 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "react-toastify": "^10.0.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
