--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.hook.ts",
+    "**/*.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
