--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.7",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/bcrypt": "^5.0.2",
 		"@types/formidable": "^3.4.5",
