Setup e configurazione di Resend per inviare email quando un utente viene registrato e quando un post viene creato. Completata anche la pagina della dashboard.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,15 @@
 			"@/*": ["./*"]
 		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.hook.ts", "**/*.d.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		"**/*.hook.ts",
+		"**/*.lib.ts",
+		"**/*.model.ts",
+		"**/*.connection.ts",
+		"**/*.d.ts"
+	],
 	"exclude": ["node_modules"]
 }
