--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-tailwindcss-datepicker": "^1.6.6",
 		"react-toastify": "^10.0.4",
 		"resend": "^3.2.0",
+		"sharp": "^0.33.3",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
